# yv-playground

./: .gitignore  README.md
projects/investment-portfolio/: .gitignore  PRD.md  README.md  api.py  benchmark_screener.py  benchmark_search.py  estimated_cost.md  pyproject.toml  run_e2e_test.py  tech_debt.md
projects/investment-portfolio/.streamlit/: config.toml
projects/investment-portfolio/data/: advisor_cache.example.json  advisor_log.example.csv  advisor_log.example.json  enrichment_cache.example.json  exclusions.example.json  perf_cache.example.json  portfolios.example.json  portfolios.json  screener_cache.example.json
projects/investment-portfolio/data/picks_cache/: claude.example.json  gemini.example.json  gpt.example.json  research.example.json
projects/investment-portfolio/data/runs/: 00000000_000000.example.json  example_run.json
projects/investment-portfolio/docs/: quorum-pitch.html
projects/investment-portfolio/docs/planning/: 2026-05-28-research-to-portfolio.md  2026-05-31-portfolio-tracker.md  portfolio_prototype.html
projects/investment-portfolio/scripts/: app.py  benchmark_search.py  main.py  run_claude_only.py  run_e2e_test.py  run_gemini_only.py  run_gpt_only.py
projects/investment-portfolio/src/: advisor.py  advisor_log.py  config.py  demo.py  enrichment.py  models.py  performance.py  portfolios.py  runner.py  screener.py
projects/investment-portfolio/src/committee/: aggregator.py  claude_member.py  gemini_member.py  gpt_member.py  philosophy.py
projects/investment-portfolio/static/: index.html
projects/investment-portfolio/static/css/: base.css  components.css  layout.css  vars.css
projects/investment-portfolio/static/js/: api.js  app.js  dates.js  drawer.js  treemap.js
projects/investment-portfolio/tests/: test_advisor.py  test_aggregator.py  test_persistence.py  test_portfolios.py  test_portfolios_performance.py
projects/licence_plates/: plate_analysis_v1.ipynb  pyproject.toml
projects/panini_stickers/: analysis_classes.ipynb  analysis_with_functions.ipynb  prelim_analysis.ipynb  pyproject.toml
projects/scopees-seven/: .gitignore  README.md  main.py  pyproject.toml
projects/scopees-seven/static/: concepts.html  index.html  mock.html  table-mock.html  themes.html
projects/scopees-seven/tests/: test_api.py  test_deck.py  test_engine.py
utilities/: pyproject.toml
utilities/src/utilities/: __init__.py  plotting_style.py  plotting_style_test.ipynb
(+43 files in other folders)
