[project]
name = "utilities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yvassiliadis", email = "yannis.vassiliadis@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"
