[project]
name = "investment-portfolio"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.104.1",
    "finvizfinance>=1.3.0",
    "google-genai>=2.6.0",
    "openai>=2.38.0",
    "plotly>=6.7.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.12",
    "streamlit>=1.57.0",
    "uvicorn[standard]>=0.32.0",
    "yfinance>=1.4.0",
]

[dependency-groups]
dev = [
    "playwright>=1.60.0",
    "pymupdf>=1.27.2.3",
    "pytest>=9.0.3",
]
