[project]
name = "licence-plates"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cycler>=0.12.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyfonts>=1.2.0",
    "pypalettes>=0.2.1",
    "seaborn>=0.13.2",
    "utilities",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.uv.sources]
utilities = { path = "../../utilities", editable = true }
