[project]
name = "scopees-seven"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-select = ["I"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
